# py_api_solid

./: pyproject.toml
infra/: mongo.yml
src/application/services/: user.py
src/domain/interfaces/: user.py
src/domain/models/: user.py
src/infrastructure/database/: mongo.py
src/infrastructure/repository/: user.py
src/presentation/api/: user.py
src/solid/: main.py
