[project]
name = "solid"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jorgeav527", email = "jorgeav527@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.118.0",
    "motor>=3.7.1",
    "uvicorn>=0.37.0",
]

[project.scripts]
solid = "solid:main"

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.3",
]
